syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.hash.challenge.rpc.proto";
option java_outer_classname = "DiscountInputProto";

package discount;

message DiscountRequest {
    string userId = 1;
    string productId = 2;
}

message DiscountResponse {
    float percentage = 1;
    int64 valueInCents = 2;
}

service DiscountService {
    rpc Discount(DiscountRequest) returns (DiscountResponse) {};
}